--- a/11 - MultipleReg - Nonlinear/hw-11.Rmd
+++ b/11 - MultipleReg - Nonlinear/hw-11.Rmd
@@ -84,9 +84,6 @@ ggplot(data=da, aes(x=advert, y=sales)) +
 ```{r}
 rbind(LOGLOG=CV(reg1), QUADRATIC=CV(reg2))
 ```
-#### Interpretation
-Choose **Log-log** model which gives the lower AIC, even though Quadratic gives the better Adjusted R Squared.  
-From the problem context, increasing advertisement expenditure should not decrease Sales. Instead, the growth of Sales could saturate at some point which aligns more with logarithmic trend.
 
 #### Solution
-We can't use CV and AIC/AICc/BIC which base on MLE to compare log-log and quadratic. Since it's log(y) vs y. We choose the right model from AdjR2.
+We can't use CV and AIC/AICc/BIC which base on MLE to compare log-log and quadratic. Since it's log(y) vs y. We choose the right model from AdjR2. -> QUADRATIC
